--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -98,7 +98,7 @@ services:
     networks:
       - phplistbehatnet
     ports:
-      - "${PHPLIST_PORT}:80"
+      - "${PHPLIST_PORT-8080}:80"
 
   mailpit:
     container_name: mailpit
@@ -119,7 +119,7 @@ services:
       MYSQL_PASSWORD: phplist
     networks:
       - phplistbehatnet
-      
+
   ## a small python app to test Selenium and debug Behat behaviour
 #   pythontest:
 #     container_name: pythontest
