rename feature file

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -12,8 +12,8 @@ testhub: stop
 stop:
 	docker-compose down --remove-orphans || true
 	docker-compose -f run-tests.yml down --remove-orphans || true
-	docker stop chrome mailpit jaegar dbhost selenium-hub phplist pythontest || true
-	docker rm chrome mailpit jaegar dbhost selenium-hub phplist pythontest || true
+	docker stop chrome mailpit dbhost phplist || true
+	docker rm chrome mailpit dbhost phplist || true
 	docker network rm tests_phplistbehatnet || true
 
 
