--- a/tests/ci/behat.yml
+++ b/tests/ci/behat.yml
@@ -7,16 +7,9 @@ default:
         - ./features
       contexts:
         - FeatureContext:
-          # Set database access credentials
-          database:
-            host: 127.0.0.1
-            user: phplist
-            password: phplist
-            name: phplistdb
-          # Set admin user login credentials
-          admin:
-            username: admin
-            password: Mypassword123+
+            admin:
+              username: admin
+              password: Mypassword123+
         - MailContext:
             mail_dir: build/mails
         - SubscriberContext
@@ -26,6 +19,7 @@ default:
     Behat\MinkExtension:
       show_cmd: 'cp %s ./output/lastResponse.html' #'cat %s'
       base_url: 'http://127.0.0.1'
+      files_path: "files/"
       default_session: chrome
       sessions:
         chrome:
