--- a/composer.json
+++ b/composer.json
@@ -89,6 +89,10 @@
       {
             "type": "vcs",
             "url": "https://github.com/bramley/phplist-plugin-updater.git"
+      },
+      {
+            "type": "vcs",
+            "url": "https://github.com/bramley/phplist-plugin-imap2.git"
       }
     ],
   "extra": {
@@ -128,7 +132,8 @@
     "bramley/phplist-plugin-ckeditor": "dev-master",
     "bramley/phplist-plugin-segment": "dev-master",
     "phplist/phplist-plugin-subjectlineplaceholders": "dev-master",
-    "bramley/phplist-plugin-updater": "dev-main"
+    "bramley/phplist-plugin-updater": "dev-main",
+    "bramley/phplist-plugin-imap2": "dev-master"
   },
   "require-dev": {
     "behat/behat": "@stable",
