--- a/composer.json
+++ b/composer.json
@@ -56,10 +56,6 @@
       },
       {
             "type": "vcs",
-            "url": "https://github.com/bramley/phplist-plugin-ckeditor.git"
-      },
-      {
-            "type": "vcs",
             "url": "https://github.com/bramley/phplist-plugin-segment.git"
       },
       {
@@ -89,6 +85,10 @@
       {
             "type": "vcs",
             "url": "https://github.com/bramley/phplist-plugin-updater.git"
+      },
+      {
+          "type": "vcs",
+          "url": "https://github.com/tatevikgr/phplist-plugin-tinymce.git"
       }
     ],
   "extra": {
@@ -125,10 +125,10 @@
     "michield/phplist-plugin-embedremoteimages": "dev-master",
     "bramley/phplist-plugin-common": "dev-master",
     "bramley/phplist-plugin-captcha": "dev-master",
-    "bramley/phplist-plugin-ckeditor": "dev-master",
     "bramley/phplist-plugin-segment": "dev-master",
     "phplist/phplist-plugin-subjectlineplaceholders": "dev-master",
-    "bramley/phplist-plugin-updater": "dev-main"
+    "bramley/phplist-plugin-updater": "dev-main",
+    "tatevikgr/phplist-plugin-tinymce": "dev-master"
   },
   "require-dev": {
     "behat/behat": "@stable",
